--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "description": "",
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "vite": "^7.0.4"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "vite": "^7.0.4"
   }
 }
