--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "rewind-fm",
   "version": "1.0.0",
-  "main": "postcss.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,6 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@vercel/static-build": "^2.7.15",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
